map html on top of the svg to avoid text wrapping issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -6,4 +10,18 @@ body {
   height: 10px;
   margin: 2px 0;
   background: blue;
+}
+
+.structure-chart {
+  position: relative;
+}
+
+.top-label-1 {
+  position: absolute;
+  /* left: 120px;
+  top: 50px; */
+  width: 150px;
+  height: 90px;
+  text-align: center;
+  padding: 10px;
 }
